--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "main": "index.js",
   "author": "Susumu Seino <seino@susu.mu>",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server"
+  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^4.12.2"
+    "webpack": "^4.12.2",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
     "react": "^16.4.1",
